# ardmediathek-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ardmediathek/: __init__.py  broadcast.py  exceptions.py  image.py  program.py  station.py  stream.py  urls.py  utils.py
scripts/: get_streams_for_program.py  list_all_programs.py  program_overview.py
tests/: test_ardmediathek.py
